Add personal logo and colour variables

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,9 @@
         {% endfor %}
       </div>
     </nav>
+    
 
+    <img src="{{ site.baseurl }}/img/carrie-logo.svg">
   </div>
 
 </header>
