--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,46 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Enable responsiveness on mobile devices-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+
+    <title>
+    {% if page.title %}
+      {{ page.title }} &middot; {{ site.title }}
+    {% else %}
+      {{ site.title }} &middot; {{ site.tagline }}
+    {% endif %}
+  </title>
+  
+  {% if page.intro %}
+    <meta content="{{ page.intro }}" name="Description">
+    {% else %}
+    <meta content="{{ site.description }}" name="Description">
+  {% endif %}
+  <meta content="index, follow" name="robots">
+   
+  <!-- Icons -->
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+
+  <!-- Icons -->
+	 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/img/apple-touch-icon-precomposed.png">
+	 <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
+
+	 <!-- Javascripts -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/modernizr.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/jquery.scrollUp.min.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/transition.js"></script>
+
+  <!-- head content -->
+  {% if page.head-content %}
+    {{ page.head-content }}
+  {% endif %}
+
+  <script type="text/javascript" src="{{ site.baseurl }}/js/scripts.js"></script>
+
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 </head>
