--- a/css/main.css
+++ b/css/main.css
@@ -1,309 +1,722 @@
-/**
- * Reset some basic elements
- */
-body, h1, h2, h3, h4, h5, h6,
-p, blockquote, pre, hr,
-dl, dd, ol, ul, figure {
+/* base styles */
+* {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased; }
+  *:before, *:after {
+    box-sizing: border-box; }
+
+html, body {
+  height: 100%;
+  background: #fff;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   margin: 0;
-  padding: 0; }
+  font-family: sans-serif; }
 
-/**
- * Basic styling
- */
-body {
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  font-weight: 300;
-  color: #111;
-  background-color: #fdfdfd;
-  -webkit-text-size-adjust: 100%; }
-
-/**
- * Set `margin-bottom` to maintain vertical rhythm
- */
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
-ul, ol, dl, figure {
-  margin-bottom: 15px; }
-
-/**
- * Images
- */
 img {
   max-width: 100%;
-  vertical-align: middle; }
+  display: inline-block; }
 
-/**
- * Figures
- */
-figure > img {
-  display: block; }
-
-figcaption {
-  font-size: 14px; }
-
-/**
- * Lists
- */
-ul, ol {
-  margin-left: 30px; }
-
-li > ul,
-li > ol {
-  margin-bottom: 0; }
-
-/**
- * Headings
- */
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 300; }
-
-/**
- * Links
- */
 a {
-  color: #2a7ae2;
+  color: #8BAF45;
+  border-bottom: 2px solid #8BAF45;
+  padding-bottom: 2px;
   text-decoration: none; }
-  a:visited {
-    color: #1756a9; }
-  a:hover {
-    color: #111;
-    text-decoration: underline; }
 
-/**
- * Blockquotes
- */
-blockquote {
-  color: #828282;
-  border-left: 4px solid #e8e8e8;
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none; }
+
+.strip {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .strip .strip-inner {
+    vertical-align: middle; }
+
+.text-center {
+  text-align: center; }
+
+img {
+  max-width: 100%; }
+
+.purple {
+  background: #7E69A4; }
+
+.container-fluid {
   padding-left: 15px;
-  font-size: 18px;
-  letter-spacing: -1px;
-  font-style: italic; }
-  blockquote > :last-child {
-    margin-bottom: 0; }
+  padding-right: 15px; }
 
-/**
- * Code formatting
- */
-pre,
-code {
-  font-size: 15px;
-  border: 1px solid #e8e8e8;
-  border-radius: 3px;
-  background-color: #eef; }
-
-code {
-  padding: 1px 5px; }
-
-pre {
-  padding: 8px 12px;
-  overflow-x: scroll; }
-  pre > code {
-    border: 0;
-    padding-right: 0;
-    padding-left: 0; }
-
-/**
- * Wrapper
- */
-.wrapper {
-  max-width: -webkit-calc(800px - (30px * 2));
-  max-width: calc(800px - (30px * 2));
+.container {
   margin-right: auto;
   margin-left: auto;
-  padding-right: 30px;
-  padding-left: 30px; }
-  @media screen and (max-width: 800px) {
-    .wrapper {
-      max-width: -webkit-calc(800px - (30px));
-      max-width: calc(800px - (30px));
-      padding-right: 15px;
-      padding-left: 15px; } }
+  padding-left: 15px;
+  padding-right: 15px; }
 
-/**
- * Clearfix
- */
-.wrapper:after, .footer-col-wrapper:after {
-  content: "";
+.container:before,
+.container:after {
+  content: " ";
+  /* 1 */
   display: table;
+  /* 2 */ }
+
+.container:after {
   clear: both; }
 
-/**
- * Icons
- */
-.icon > svg {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  vertical-align: middle; }
-  .icon > svg path {
-    fill: #828282; }
+.row {
+  margin-left: -15px;
+  margin-right: -15px; }
 
-/**
- * Site header
- */
-.site-header {
-  border-top: 5px solid #424242;
-  border-bottom: 1px solid #e8e8e8;
-  min-height: 56px;
-  position: relative; }
+.row:before,
+.row:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */ }
 
-.site-title {
-  font-size: 26px;
-  line-height: 56px;
-  letter-spacing: -1px;
-  margin-bottom: 0;
+.row:after {
+  clear: both; }
+
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px; }
+
+.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11 {
   float: left; }
-  .site-title, .site-title:visited {
-    color: #424242; }
 
-.site-nav {
-  float: right;
-  line-height: 56px; }
-  .site-nav .menu-icon {
-    display: none; }
-  .site-nav .page-link {
-    color: #111;
-    line-height: 1.5; }
-    .site-nav .page-link:not(:first-child) {
-      margin-left: 20px; }
-  @media screen and (max-width: 600px) {
-    .site-nav {
-      position: absolute;
-      top: 9px;
-      right: 30px;
-      background-color: #fdfdfd;
-      border: 1px solid #e8e8e8;
-      border-radius: 5px;
-      text-align: right; }
-      .site-nav .menu-icon {
-        display: block;
-        float: right;
-        width: 36px;
-        height: 26px;
-        line-height: 0;
-        padding-top: 10px;
-        text-align: center; }
-        .site-nav .menu-icon > svg {
-          width: 18px;
-          height: 15px; }
-          .site-nav .menu-icon > svg path {
-            fill: #424242; }
-      .site-nav .trigger {
-        clear: both;
-        display: none; }
-      .site-nav:hover .trigger {
-        display: block;
-        padding-bottom: 5px; }
-      .site-nav .page-link {
-        display: block;
-        padding: 5px 10px; } }
+.col-xs-12 {
+  width: 100%; }
 
-/**
- * Site footer
- */
-.site-footer {
-  border-top: 1px solid #e8e8e8;
-  padding: 30px 0; }
+.col-xs-11 {
+  width: 91.66666666666666%; }
 
-.footer-heading {
-  font-size: 18px;
-  margin-bottom: 15px; }
+.col-xs-10 {
+  width: 83.33333333333334%; }
 
-.contact-list,
-.social-media-list {
-  list-style: none;
-  margin-left: 0; }
+.col-xs-9 {
+  width: 75%; }
 
-.footer-col-wrapper {
-  font-size: 15px;
-  color: #828282;
-  margin-left: -15px; }
+.col-xs-8 {
+  width: 66.66666666666666%; }
 
-.footer-col {
-  float: left;
-  margin-bottom: 15px;
-  padding-left: 15px; }
+.col-xs-7 {
+  width: 58.333333333333336%; }
 
-.footer-col-1 {
-  width: -webkit-calc(35% - (30px / 2));
-  width: calc(35% - (30px / 2)); }
+.col-xs-6 {
+  width: 50%; }
 
-.footer-col-2 {
-  width: -webkit-calc(20% - (30px / 2));
-  width: calc(20% - (30px / 2)); }
+.col-xs-5 {
+  width: 41.66666666666667%; }
 
-.footer-col-3 {
-  width: -webkit-calc(45% - (30px / 2));
-  width: calc(45% - (30px / 2)); }
+.col-xs-4 {
+  width: 33.33333333333333%; }
 
-@media screen and (max-width: 800px) {
-  .footer-col-1,
-  .footer-col-2 {
-    width: -webkit-calc(50% - (30px / 2));
-    width: calc(50% - (30px / 2)); }
+.col-xs-3 {
+  width: 25%; }
 
-  .footer-col-3 {
-    width: -webkit-calc(100% - (30px / 2));
-    width: calc(100% - (30px / 2)); } }
-@media screen and (max-width: 600px) {
-  .footer-col {
-    float: none;
-    width: -webkit-calc(100% - (30px / 2));
-    width: calc(100% - (30px / 2)); } }
-/**
- * Page content
- */
-.page-content {
-  padding: 30px 0; }
+.col-xs-2 {
+  width: 16.666666666666664%; }
 
-.page-heading {
-  font-size: 20px; }
+.col-xs-1 {
+  width: 8.333333333333332%; }
 
-.post-list {
-  margin-left: 0;
-  list-style: none; }
-  .post-list > li {
-    margin-bottom: 30px; }
+.col-xs-pull-12 {
+  right: 100%; }
 
-.post-meta {
-  font-size: 14px;
-  color: #828282; }
+.col-xs-pull-11 {
+  right: 91.66666666666666%; }
 
-.post-link {
-  display: block;
-  font-size: 24px; }
+.col-xs-pull-10 {
+  right: 83.33333333333334%; }
 
-/**
- * Posts
- */
-.post-header {
-  margin-bottom: 30px; }
+.col-xs-pull-9 {
+  right: 75%; }
 
-.post-title {
-  font-size: 42px;
-  letter-spacing: -1px;
-  line-height: 1; }
-  @media screen and (max-width: 800px) {
-    .post-title {
-      font-size: 36px; } }
+.col-xs-pull-8 {
+  right: 66.66666666666666%; }
 
-.post-content {
-  margin-bottom: 30px; }
-  .post-content h2 {
-    font-size: 32px; }
-    @media screen and (max-width: 800px) {
-      .post-content h2 {
-        font-size: 28px; } }
-  .post-content h3 {
-    font-size: 26px; }
-    @media screen and (max-width: 800px) {
-      .post-content h3 {
-        font-size: 22px; } }
-  .post-content h4 {
-    font-size: 20px; }
-    @media screen and (max-width: 800px) {
-      .post-content h4 {
-        font-size: 18px; } }
+.col-xs-pull-7 {
+  right: 58.333333333333336%; }
+
+.col-xs-pull-6 {
+  right: 50%; }
+
+.col-xs-pull-5 {
+  right: 41.66666666666667%; }
+
+.col-xs-pull-4 {
+  right: 33.33333333333333%; }
+
+.col-xs-pull-3 {
+  right: 25%; }
+
+.col-xs-pull-2 {
+  right: 16.666666666666664%; }
+
+.col-xs-pull-1 {
+  right: 8.333333333333332%; }
+
+.col-xs-pull-0 {
+  right: 0%; }
+
+.col-xs-push-12 {
+  left: 100%; }
+
+.col-xs-push-11 {
+  left: 91.66666666666666%; }
+
+.col-xs-push-10 {
+  left: 83.33333333333334%; }
+
+.col-xs-push-9 {
+  left: 75%; }
+
+.col-xs-push-8 {
+  left: 66.66666666666666%; }
+
+.col-xs-push-7 {
+  left: 58.333333333333336%; }
+
+.col-xs-push-6 {
+  left: 50%; }
+
+.col-xs-push-5 {
+  left: 41.66666666666667%; }
+
+.col-xs-push-4 {
+  left: 33.33333333333333%; }
+
+.col-xs-push-3 {
+  left: 25%; }
+
+.col-xs-push-2 {
+  left: 16.666666666666664%; }
+
+.col-xs-push-1 {
+  left: 8.333333333333332%; }
+
+.col-xs-push-0 {
+  left: 0%; }
+
+.col-xs-offset-12 {
+  margin-left: 100%; }
+
+.col-xs-offset-11 {
+  margin-left: 91.66666666666666%; }
+
+.col-xs-offset-10 {
+  margin-left: 83.33333333333334%; }
+
+.col-xs-offset-9 {
+  margin-left: 75%; }
+
+.col-xs-offset-8 {
+  margin-left: 66.66666666666666%; }
+
+.col-xs-offset-7 {
+  margin-left: 58.333333333333336%; }
+
+.col-xs-offset-6 {
+  margin-left: 50%; }
+
+.col-xs-offset-5 {
+  margin-left: 41.66666666666667%; }
+
+.col-xs-offset-4 {
+  margin-left: 33.33333333333333%; }
+
+.col-xs-offset-3 {
+  margin-left: 25%; }
+
+.col-xs-offset-2 {
+  margin-left: 16.666666666666664%; }
+
+.col-xs-offset-1 {
+  margin-left: 8.333333333333332%; }
+
+.col-xs-offset-0 {
+  margin-left: 0%; }
+
+@media (min-width: 768px) {
+  .container {
+    width: 750px; }
+
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11 {
+    float: left; }
+
+  .col-sm-12 {
+    width: 100%; }
+
+  .col-sm-11 {
+    width: 91.66666666666666%; }
+
+  .col-sm-10 {
+    width: 83.33333333333334%; }
+
+  .col-sm-9 {
+    width: 75%; }
+
+  .col-sm-8 {
+    width: 66.66666666666666%; }
+
+  .col-sm-7 {
+    width: 58.333333333333336%; }
+
+  .col-sm-6 {
+    width: 50%; }
+
+  .col-sm-5 {
+    width: 41.66666666666667%; }
+
+  .col-sm-4 {
+    width: 33.33333333333333%; }
+
+  .col-sm-3 {
+    width: 25%; }
+
+  .col-sm-2 {
+    width: 16.666666666666664%; }
+
+  .col-sm-1 {
+    width: 8.333333333333332%; }
+
+  .col-sm-pull-12 {
+    right: 100%; }
+
+  .col-sm-pull-11 {
+    right: 91.66666666666666%; }
+
+  .col-sm-pull-10 {
+    right: 83.33333333333334%; }
+
+  .col-sm-pull-9 {
+    right: 75%; }
+
+  .col-sm-pull-8 {
+    right: 66.66666666666666%; }
+
+  .col-sm-pull-7 {
+    right: 58.333333333333336%; }
+
+  .col-sm-pull-6 {
+    right: 50%; }
+
+  .col-sm-pull-5 {
+    right: 41.66666666666667%; }
+
+  .col-sm-pull-4 {
+    right: 33.33333333333333%; }
+
+  .col-sm-pull-3 {
+    right: 25%; }
+
+  .col-sm-pull-2 {
+    right: 16.666666666666664%; }
+
+  .col-sm-pull-1 {
+    right: 8.333333333333332%; }
+
+  .col-sm-pull-0 {
+    right: 0%; }
+
+  .col-sm-push-12 {
+    left: 100%; }
+
+  .col-sm-push-11 {
+    left: 91.66666666666666%; }
+
+  .col-sm-push-10 {
+    left: 83.33333333333334%; }
+
+  .col-sm-push-9 {
+    left: 75%; }
+
+  .col-sm-push-8 {
+    left: 66.66666666666666%; }
+
+  .col-sm-push-7 {
+    left: 58.333333333333336%; }
+
+  .col-sm-push-6 {
+    left: 50%; }
+
+  .col-sm-push-5 {
+    left: 41.66666666666667%; }
+
+  .col-sm-push-4 {
+    left: 33.33333333333333%; }
+
+  .col-sm-push-3 {
+    left: 25%; }
+
+  .col-sm-push-2 {
+    left: 16.666666666666664%; }
+
+  .col-sm-push-1 {
+    left: 8.333333333333332%; }
+
+  .col-sm-push-0 {
+    left: 0%; }
+
+  .col-sm-offset-12 {
+    margin-left: 100%; }
+
+  .col-sm-offset-11 {
+    margin-left: 91.66666666666666%; }
+
+  .col-sm-offset-10 {
+    margin-left: 83.33333333333334%; }
+
+  .col-sm-offset-9 {
+    margin-left: 75%; }
+
+  .col-sm-offset-8 {
+    margin-left: 66.66666666666666%; }
+
+  .col-sm-offset-7 {
+    margin-left: 58.333333333333336%; }
+
+  .col-sm-offset-6 {
+    margin-left: 50%; }
+
+  .col-sm-offset-5 {
+    margin-left: 41.66666666666667%; }
+
+  .col-sm-offset-4 {
+    margin-left: 33.33333333333333%; }
+
+  .col-sm-offset-3 {
+    margin-left: 25%; }
+
+  .col-sm-offset-2 {
+    margin-left: 16.666666666666664%; }
+
+  .col-sm-offset-1 {
+    margin-left: 8.333333333333332%; }
+
+  .col-sm-offset-0 {
+    margin-left: 0%; } }
+@media (min-width: 992px) {
+  .container {
+    width: 970px; }
+
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11 {
+    float: left; }
+
+  .col-md-12 {
+    width: 100%; }
+
+  .col-md-11 {
+    width: 91.66666666666666%; }
+
+  .col-md-10 {
+    width: 83.33333333333334%; }
+
+  .col-md-9 {
+    width: 75%; }
+
+  .col-md-8 {
+    width: 66.66666666666666%; }
+
+  .col-md-7 {
+    width: 58.333333333333336%; }
+
+  .col-md-6 {
+    width: 50%; }
+
+  .col-md-5 {
+    width: 41.66666666666667%; }
+
+  .col-md-4 {
+    width: 33.33333333333333%; }
+
+  .col-md-3 {
+    width: 25%; }
+
+  .col-md-2 {
+    width: 16.666666666666664%; }
+
+  .col-md-1 {
+    width: 8.333333333333332%; }
+
+  .col-md-pull-12 {
+    right: 100%; }
+
+  .col-md-pull-11 {
+    right: 91.66666666666666%; }
+
+  .col-md-pull-10 {
+    right: 83.33333333333334%; }
+
+  .col-md-pull-9 {
+    right: 75%; }
+
+  .col-md-pull-8 {
+    right: 66.66666666666666%; }
+
+  .col-md-pull-7 {
+    right: 58.333333333333336%; }
+
+  .col-md-pull-6 {
+    right: 50%; }
+
+  .col-md-pull-5 {
+    right: 41.66666666666667%; }
+
+  .col-md-pull-4 {
+    right: 33.33333333333333%; }
+
+  .col-md-pull-3 {
+    right: 25%; }
+
+  .col-md-pull-2 {
+    right: 16.666666666666664%; }
+
+  .col-md-pull-1 {
+    right: 8.333333333333332%; }
+
+  .col-md-pull-0 {
+    right: 0%; }
+
+  .col-md-push-12 {
+    left: 100%; }
+
+  .col-md-push-11 {
+    left: 91.66666666666666%; }
+
+  .col-md-push-10 {
+    left: 83.33333333333334%; }
+
+  .col-md-push-9 {
+    left: 75%; }
+
+  .col-md-push-8 {
+    left: 66.66666666666666%; }
+
+  .col-md-push-7 {
+    left: 58.333333333333336%; }
+
+  .col-md-push-6 {
+    left: 50%; }
+
+  .col-md-push-5 {
+    left: 41.66666666666667%; }
+
+  .col-md-push-4 {
+    left: 33.33333333333333%; }
+
+  .col-md-push-3 {
+    left: 25%; }
+
+  .col-md-push-2 {
+    left: 16.666666666666664%; }
+
+  .col-md-push-1 {
+    left: 8.333333333333332%; }
+
+  .col-md-push-0 {
+    left: 0%; }
+
+  .col-md-offset-12 {
+    margin-left: 100%; }
+
+  .col-md-offset-11 {
+    margin-left: 91.66666666666666%; }
+
+  .col-md-offset-10 {
+    margin-left: 83.33333333333334%; }
+
+  .col-md-offset-9 {
+    margin-left: 75%; }
+
+  .col-md-offset-8 {
+    margin-left: 66.66666666666666%; }
+
+  .col-md-offset-7 {
+    margin-left: 58.333333333333336%; }
+
+  .col-md-offset-6 {
+    margin-left: 50%; }
+
+  .col-md-offset-5 {
+    margin-left: 41.66666666666667%; }
+
+  .col-md-offset-4 {
+    margin-left: 33.33333333333333%; }
+
+  .col-md-offset-3 {
+    margin-left: 25%; }
+
+  .col-md-offset-2 {
+    margin-left: 16.666666666666664%; }
+
+  .col-md-offset-1 {
+    margin-left: 8.333333333333332%; }
+
+  .col-md-offset-0 {
+    margin-left: 0%; } }
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px; }
+
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11 {
+    float: left; }
+
+  .col-lg-12 {
+    width: 100%; }
+
+  .col-lg-11 {
+    width: 91.66666666666666%; }
+
+  .col-lg-10 {
+    width: 83.33333333333334%; }
+
+  .col-lg-9 {
+    width: 75%; }
+
+  .col-lg-8 {
+    width: 66.66666666666666%; }
+
+  .col-lg-7 {
+    width: 58.333333333333336%; }
+
+  .col-lg-6 {
+    width: 50%; }
+
+  .col-lg-5 {
+    width: 41.66666666666667%; }
+
+  .col-lg-4 {
+    width: 33.33333333333333%; }
+
+  .col-lg-3 {
+    width: 25%; }
+
+  .col-lg-2 {
+    width: 16.666666666666664%; }
+
+  .col-lg-1 {
+    width: 8.333333333333332%; }
+
+  .col-lg-pull-12 {
+    right: 100%; }
+
+  .col-lg-pull-11 {
+    right: 91.66666666666666%; }
+
+  .col-lg-pull-10 {
+    right: 83.33333333333334%; }
+
+  .col-lg-pull-9 {
+    right: 75%; }
+
+  .col-lg-pull-8 {
+    right: 66.66666666666666%; }
+
+  .col-lg-pull-7 {
+    right: 58.333333333333336%; }
+
+  .col-lg-pull-6 {
+    right: 50%; }
+
+  .col-lg-pull-5 {
+    right: 41.66666666666667%; }
+
+  .col-lg-pull-4 {
+    right: 33.33333333333333%; }
+
+  .col-lg-pull-3 {
+    right: 25%; }
+
+  .col-lg-pull-2 {
+    right: 16.666666666666664%; }
+
+  .col-lg-pull-1 {
+    right: 8.333333333333332%; }
+
+  .col-lg-pull-0 {
+    right: 0%; }
+
+  .col-lg-push-12 {
+    left: 100%; }
+
+  .col-lg-push-11 {
+    left: 91.66666666666666%; }
+
+  .col-lg-push-10 {
+    left: 83.33333333333334%; }
+
+  .col-lg-push-9 {
+    left: 75%; }
+
+  .col-lg-push-8 {
+    left: 66.66666666666666%; }
+
+  .col-lg-push-7 {
+    left: 58.333333333333336%; }
+
+  .col-lg-push-6 {
+    left: 50%; }
+
+  .col-lg-push-5 {
+    left: 41.66666666666667%; }
+
+  .col-lg-push-4 {
+    left: 33.33333333333333%; }
+
+  .col-lg-push-3 {
+    left: 25%; }
+
+  .col-lg-push-2 {
+    left: 16.666666666666664%; }
+
+  .col-lg-push-1 {
+    left: 8.333333333333332%; }
+
+  .col-lg-push-0 {
+    left: 0%; }
+
+  .col-lg-offset-12 {
+    margin-left: 100%; }
+
+  .col-lg-offset-11 {
+    margin-left: 91.66666666666666%; }
+
+  .col-lg-offset-10 {
+    margin-left: 83.33333333333334%; }
+
+  .col-lg-offset-9 {
+    margin-left: 75%; }
+
+  .col-lg-offset-8 {
+    margin-left: 66.66666666666666%; }
+
+  .col-lg-offset-7 {
+    margin-left: 58.333333333333336%; }
+
+  .col-lg-offset-6 {
+    margin-left: 50%; }
+
+  .col-lg-offset-5 {
+    margin-left: 41.66666666666667%; }
+
+  .col-lg-offset-4 {
+    margin-left: 33.33333333333333%; }
+
+  .col-lg-offset-3 {
+    margin-left: 25%; }
+
+  .col-lg-offset-2 {
+    margin-left: 16.666666666666664%; }
+
+  .col-lg-offset-1 {
+    margin-left: 8.333333333333332%; }
+
+  .col-lg-offset-0 {
+    margin-left: 0%; } }
+@-ms-viewport {
+  width: device-width; }
