--- a/css/_sass/general/_general.scss
+++ b/css/_sass/general/_general.scss
@@ -45,11 +45,11 @@ a:active {
 
 .strip{
 	width:100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
+  display: table;
 	.strip-inner{
+		 display: table-cell;
+  text-align: center;
+  vertical-align: middle;
 		vertical-align: middle;
 	}
 }
