--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,11 @@ a:active {
 
 .strip {
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
+  display: table; }
   .strip .strip-inner {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
     vertical-align: middle; }
 
 .text-center {
