Add fonts and temporarily remove blog posts

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,10 @@
 <div class="strip purple section1">
   <div class="col-md-8 col-md-offset-2 text-center strip-inner">
     <img src="{{ site.baseurl }}/img/carrie-logo.svg">
+  	<div class="header-text">
+  		<span>Hello there, nice to meet you!</span>
+    	<h1>I’m Carrie, a web designer & maker<br>of nice things.</h1>
+  	</div>
   </div>
 </div>
     
