--- a/css/_sass/general/_general.scss
+++ b/css/_sass/general/_general.scss
@@ -3,6 +3,7 @@
 * {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
+  font-family: 'Dosis';
   &:before, &:after {
     box-sizing: border-box;
   }
@@ -42,15 +43,28 @@ a:active {
 
 
 
-
 .strip{
 	width:100%;
   display: table;
 	.strip-inner{
-		 display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-		vertical-align: middle;
+		display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+    float: none;
+    img{
+      padding:30px;
+    }
+    h1{
+      color:#F0EEF4;
+      margin-top: 5px;
+    }
+    span{
+      font-size: 25px;
+      font-weight: 600;
+      color: #E0DBE9;
+      line-height: 1.2em;
+      font-family: 'Raleway';
+    }
 	}
 }
 .text-center{
