--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 /* base styles */
 * {
   box-sizing: border-box;
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+  font-family: 'Dosis'; }
   *:before, *:after {
     box-sizing: border-box; }
 
@@ -35,7 +36,18 @@ a:active {
     display: table-cell;
     text-align: center;
     vertical-align: middle;
-    vertical-align: middle; }
+    float: none; }
+    .strip .strip-inner img {
+      padding: 30px; }
+    .strip .strip-inner h1 {
+      color: #F0EEF4;
+      margin-top: 5px; }
+    .strip .strip-inner span {
+      font-size: 25px;
+      font-weight: 600;
+      color: #E0DBE9;
+      line-height: 1.2em;
+      font-family: 'Raleway'; }
 
 .text-center {
   text-align: center; }
@@ -721,3 +733,21 @@ img {
     margin-left: 0%; } }
 @-ms-viewport {
   width: device-width; }
+@font-face {
+  font-family: 'Dosis';
+  src: url("../fonts/Dosis-Regular.eot");
+  src: url("../fonts/Dosis-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Dosis-Regular.woff") format("woff"), url("../fonts/Dosis-Regular.ttf") format("truetype"), url("../fonts/Dosis-Regular.svg#Dosis-Regular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'Raleway';
+  src: url("../fonts/Raleway-Regular.eot");
+  src: url("../fonts/Raleway-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Raleway-Regular.woff") format("woff"), url("../fonts/Raleway-Regular.ttf") format("truetype"), url("../fonts/Raleway-Regular.svg#Raleway-Regular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+h1 {
+  font-size: 33px;
+  font-family: 'Dosis'; }
+  @media only screen and (max-width: 450px) {
+    h1 {
+      font-size: 16px; } }
