--- a/css/_sass/general/_general.scss
+++ b/css/_sass/general/_general.scss
@@ -64,6 +64,9 @@ a:active {
       color: #E0DBE9;
       line-height: 1.2em;
       font-family: 'Raleway';
+      @include media-query (xxs-max) {
+        font-size: 16px;
+      }
     }
 	}
 }
