--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,9 @@ a:active {
       color: #E0DBE9;
       line-height: 1.2em;
       font-family: 'Raleway'; }
+      @media only screen and (max-width: 450px) {
+        .strip .strip-inner span {
+          font-size: 16px; } }
 
 .text-center {
   text-align: center; }
@@ -750,4 +753,4 @@ h1 {
   font-family: 'Dosis'; }
   @media only screen and (max-width: 450px) {
     h1 {
-      font-size: 16px; } }
+      font-size: 19px; } }
