--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,9 @@
 * {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
-  font-family: 'Dosis'; }
+  font-family: 'Dosis';
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease; }
   *:before, *:after {
     box-sizing: border-box; }
 
