Add content to website

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,7 @@
   <meta content="index, follow" name="robots">
    
   <!-- Icons -->
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 
   <!-- Icons -->
@@ -33,6 +34,7 @@
   <script type="text/javascript" src="{{ site.baseurl }}/js/modernizr.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/js/jquery.scrollUp.min.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/js/transition.js"></script>
+ <script type="text/javascript" src="{{ site.baseurl }}/js/bootstrap.js"></script>
 
   <!-- head content -->
   {% if page.head-content %}
