--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,12 @@
   {% include head.html %}
 
   <body>
-
-    {% include header.html %}
+    <div class="header-large">
+      {% include header.html %}
+    </div>
+    
 <!--
-    <div class="page-content">
+    <div class="page-content" id="content">
       <div class="wrapper">
         {{ content }}
       </div>
