--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,64 @@
-<div class="strip purple section1">
-  <div class="col-md-8 col-md-offset-2 text-center strip-inner">
-    <img src="{{ site.baseurl }}/img/carrie-logo.svg">
-  	<div class="header-text">
-  		<span>Hello there, nice to meet you!</span>
-    	<h1>I’m Carrie, a web designer & maker<br>of nice things.</h1>
-  	</div>
-  </div>
-</div>
+<div class="fixIt">
+	<div class="strip purple section1" >
+	  <div class="col-md-8 col-md-offset-2 text-center strip-inner">
+	    <img src="{{ site.baseurl }}/img/carrie-logo.svg" class="animated">
+	  	<div class="header-text animated">
+	  		<span>Hello there, nice to meet you!</span>
+	    	<h1>I’m Carrie, a web designer & maker<br>of nice things.</h1>
+	  	</div>
+	  </div>
+	</div>
+
     
+
+
+	<!-- Nav tabs -->
+	<ul class="nav nav-tabs" role="tablist">
+	  <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab" class="scroll">Web</a></li>
+	  <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Design & Illustration</a></li>
+	  <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">About me</a></li>
+	  <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Blog</a></li>
+	</ul>
+	</div>
+
+	<!-- Tab panes -->
+	<div class="tab-content">
+	  <div role="tabpanel" class="tab-pane active" id="home">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 text-center section-margin">		
+	    			<h3><b>Here is a selection of some of my design and illustration work </b></h3>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4">
+					<img src="{{ site.baseurl }}/img/work/fern.png">
+					</div>
+					<div class="col-md-4">
+						<img src="{{ site.baseurl }}/img/work/jumbo.jpg">
+					</div>
+					<div class="col-md-4">
+						<img src="{{ site.baseurl }}/img/work/moja.jpg">
+					</div>
+				</div>
+				
+				<div class="row">
+					<div class="col-md-4">
+						<img src="{{ site.baseurl }}/img/work/watch.jpg">
+					</div>
+					<div class="col-md-4">
+						<img src="{{ site.baseurl }}/img/work/fish.jpg">
+					</div>
+					<div class="col-md-4">
+						<img src="{{ site.baseurl }}/img/work/localgov.jpg">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+ 
+  <div role="tabpanel" class="tab-pane" id="profile">...</div>
+  <div role="tabpanel" class="tab-pane" id="messages">...</div>
+  <div role="tabpanel" class="tab-pane" id="settings">...</div>
+</div>
+
