--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   -webkit-font-smoothing: antialiased;
   font-family: 'Dosis';
   -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease; }
+  transition: all 0.5s ease; }
   *:before, *:after {
     box-sizing: border-box; }
 
@@ -12,7 +12,7 @@ html, body {
   height: 100%;
   background: #fff;
   -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+  transition: all 0.5s ease;
   margin: 0;
   font-family: sans-serif; }
 
@@ -31,16 +31,24 @@ a:focus,
 a:active {
   text-decoration: none; }
 
+.fixIt {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 999; }
+
 .strip {
   width: 100%;
-  display: table; }
+  display: table;
+  height: 500px; }
   .strip .strip-inner {
     display: table-cell;
     text-align: center;
     vertical-align: middle;
     float: none; }
     .strip .strip-inner img {
-      padding: 30px; }
+      padding: 30px;
+      max-height: 250px; }
     .strip .strip-inner h1 {
       color: #F0EEF4;
       margin-top: 5px; }
@@ -62,6 +70,18 @@ img {
 
 .purple {
   background: #7E69A4; }
+
+.tab-content.top-margin {
+  margin-top: 250px; }
+
+.tab-content {
+  margin-top: 650px; }
+
+.col-md-4 {
+  margin-bottom: 20px; }
+
+.section-margin {
+  margin-bottom: 35px; }
 
 .container-fluid {
   padding-left: 15px;
@@ -738,6 +758,65 @@ img {
     margin-left: 0%; } }
 @-ms-viewport {
   width: device-width; }
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 0.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both; }
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0;
+    display: none; } }
+@keyframes fadeOut {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0;
+    display: none !important;
+    height: 0; } }
+.fadeOut {
+  -webkit-animation-name: fadeOut;
+  animation-name: fadeOut; }
+
+@-webkit-keyframes shrinkIt {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0;
+    display: none; } }
+@keyframes shrinkIt {
+  0% {
+    width: 324px; }
+  80% {
+    width: 150px; }
+  100% {
+    width: 150px; } }
+.shrinkIt {
+  -webkit-animation-name: shrinkIt;
+  animation-name: shrinkIt; }
+
+.nav {
+  background: #C9C2D6;
+  text-align: center; }
+  .nav ul {
+    margin: 0; }
+  .nav li {
+    padding: 40px;
+    display: inline-block;
+    font-size: 25px; }
+    .nav li a {
+      border: 0;
+      font-weight: 600;
+      color: #553F7B; }
+
+.resize .strip.purple {
+  height: 50px !important; }
+.resize .nav li {
+  padding: 20px 40px; }
+
 @font-face {
   font-family: 'Dosis';
   src: url("../fonts/Dosis-Regular.eot");
